natalia master made me push

--- a/MyTunes/Views/Shared/_Layout.cshtml
+++ b/MyTunes/Views/Shared/_Layout.cshtml
@@ -53,6 +53,13 @@
                                 <a class="nav-link" asp-controller="User" asp-action="Index">Users</a>
                             }
                         </li>
+                          <li class="nav-item" style="margin-left: auto">
+                            @if(ViewData.ContainsKey("username") && ViewData["username"] != null)
+                            {
+                                <a class="nav-link text-dark">User: @ViewData["username"]</a>
+                            }
+                        </li>
+
                         <li class="nav-item">
                             @if(ViewData.ContainsKey("username") && ViewData["username"] != null)
                             {
