--- a/MyTunes/Views/Song/Index.cshtml
+++ b/MyTunes/Views/Song/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Songs</h1>
 @if(ViewData.ContainsKey("username") && ViewData["username"].ToString() == "admin") {
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create", asp-route-id="@ViewBag.AlbumId">Create New</a>    
 </p>
 }  
 <table class="table">
