once again made me push but i fixed profile

--- a/MyTunes/Views/Shared/_Layout.cshtml
+++ b/MyTunes/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" controller="Home" asp-action="Profile">Profile</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Profile">Profile</a>
                         </li>
                         <li class="nav-item">
                             @if(ViewData.ContainsKey("username") && ViewData["username"] != null)
@@ -63,7 +63,7 @@
                         <li class="nav-item">
                             @if(ViewData.ContainsKey("username") && ViewData["username"] != null)
                             {
-                                <a class="nav-link text-dark" asp-area="" controller="Home" asp-action="Logout">Logout</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
                             }
                         </li>
                     </ul>
